--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,9 @@
 [tool.poetry]
 name = "df-processors"
-version = "0.1.0"
-description = ""
+version = "0.1.1"
+description = "A Python library that provides utilities to process your pandas DataFrame."
 authors = ["khuyentran1401 <khuyentran1476@gmail.com>"]
+repository = "https://github.com/khuyentran1401/df-processors.git"
 readme = "README.md"
 
 [tool.poetry.dependencies]
@@ -10,7 +11,6 @@ python = "^3.10"
 pandas = "^2.2.2"
 scikit-learn = "^1.4.2"
 scipy = "^1.13.0"
-
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.0"
