--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,22 @@
 [tool.poetry]
 name = "df-processors"
-version = "0.1.1"
+version = "0.1.2"
 description = "A Python library that provides utilities to process your pandas DataFrame."
 authors = ["khuyentran1401 <khuyentran1476@gmail.com>"]
 repository = "https://github.com/khuyentran1401/df-processors.git"
+documentation = "https://github.com/khuyentran1401/df-processors/blob/main/README.md"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.9"
 pandas = "^2.2.2"
 scikit-learn = "^1.4.2"
 scipy = "^1.13.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.0"
+mypy = "^1.10.0"
+pandas-stubs = "^2.2.2.240514"
 
 [build-system]
 requires = ["poetry-core"]
@@ -53,3 +56,6 @@ line-length = 88
 
 [tool.ruff.mccabe]
 max-complexity = 10
+
+[tool.mypy]
+ignore_missing_imports = true
