--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,8 @@
 [tool.poetry]
-name = "df-processors"
-version = "0.1.2"
-description = "A Python library that provides utilities to process your pandas DataFrame."
+name = "pandas-processors"
+version = "0.1.0"
+description = ""
 authors = ["khuyentran1401 <khuyentran1476@gmail.com>"]
-repository = "https://github.com/khuyentran1401/df-processors.git"
-documentation = "https://github.com/khuyentran1401/df-processors/blob/main/README.md"
 readme = "README.md"
 
 [tool.poetry.dependencies]
