--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,11 @@
 [tool.poetry]
 name = "pandas-processors"
-version = "0.1.1"
+version = "0.1.2"
 description = "A Python library that provides utilities to process your pandas DataFrame."
 authors = ["khuyentran1401 <khuyentran1476@gmail.com>"]
 repository = "https://github.com/khuyentran1401/pandas-processors.git"
 readme = "README.md"
+documentation = "https://khuyentran1401.github.io/pandas-processors/"
 
 [tool.poetry.dependencies]
 python = "^3.9"
